fixed background on rules section so buttons under will be covered. Fixed paddings and gaps in rules section

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ main#app {
 	width: 1440px;
 	max-width: 95%;
 	margin: 0 auto;
-	padding: 2rem;
+	padding: 2rem 1rem;
 	position: relative;
 }
 
@@ -149,6 +149,11 @@ option {
 	align-items: center;
 	width: 100%;
 	padding: 2rem 0;
+}
+
+#game .top h2 {
+	text-align: center;
+	max-width: 50%;
 }
 
 .player-name {
@@ -320,16 +325,20 @@ svg {
 
 #rules .top {
 	width: 100%;
-	padding: 2rem 0;
+	padding: 2rem 1rem;
+	margin-top: 1rem;
 }
 
 #rules .main {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	gap: 5rem;
+	gap: 4rem;
 	max-width: 30rem;
 	margin: 0 auto;
+	padding: 2rem 1rem;
+	padding-top: 0;
+	z-index: 1000;
 }
 
 #rules .main h2 {
@@ -344,13 +353,14 @@ svg {
 	display: flex;
 	flex-direction: column;
 	gap: 2rem;
+	background-color: var(--background-color);
 }
 
 #rules .main ul li {
 	display: flex;
 	justify-content: space-between;
 	gap: 1rem;
-	font-size: 1.2rem;
+	font-size: 0.9rem;
 	font-weight: 500;
 }
 
